src/styles/components/search.css
.area.search .search {
  display: flex;
  gap: var(--small-gap);

  width: 100%;
  align-items: center;

  background-color: rgba(var(--light-rgb), 0.75);
  border: var(--small-border) solid var(--lighter);

  border-radius: var(--border-radius);
  padding: var(--small-padding);

  box-sizing: border-box;
  transition: var(--transition-speed) background-color;

  cursor: text;
  height: 3rem;
}

.area.search .search:focus-within {
  background-color: rgba(var(--light-rgb), 1.25);
}

.area.search .search .input {
  width: 100%;
  background-color: transparent;

  border: none;
  outline: none;

  font-size: var(--large-font);
  color: var(--text);

  user-select: none;
  -webkit-user-select: none;
}

.area.search .search .input::placeholder {
  font-weight: 300;
  opacity: var(--dim-opacity);

  user-select: none;
  -webkit-user-select: none;
}

.area.search .search .icon {
  opacity: 25%;
}

.area.search .search .clear {
  display: none;
  width: 1.8rem;

  align-items: center;
  justify-content: center;

  background-color: var(--primary);
  padding: calc(var(--small-padding) / 1.75);

  border-radius: var(--border-radius);
  transition: var(--transition-speed) opacity;

  box-sizing: border-box;
  cursor: pointer;
}

@media (prefers-color-scheme: dark) {
  .area.search .search .clear {
    color: var(--background);
  }
}

@media (prefers-color-scheme: light) {
  .area.search .search .clear {
    color: var(--text);
  }
}

html.dark .area.search .search .clear {
  color: var(--background);
}

html.light .area.search .search .clear {
  color: var(--text);
}

.area.search .search .clear.active {
  display: flex;
}

@media (hover: hover) {
  .area.search .search:hover {
    background-color: rgba(var(--light-rgb), 1.25);
  }

  .area.search .search .clear:hover {
    opacity: var(--dim-opacity);
  }
}

.area.search .cards {
  margin-top: 1rem;
}

